# frusa_lattice_mc

./: .clang-format  .gitignore  .main.cpp.swp  .mc_routines.cpp.swp  .mc_routines.h.swp  .models.cpp.swp  .models.h.swp  .utils.cpp.swp  .utils.h.swp  CMakeLists.txt  CMakeToolchain.txt  LICENSE  README.md  build_and_run  example_simulation.ipynb  fields.cpp  fields.h  main.cpp  main_fields.cpp  main_particles.cpp  makefile  mc_routines.cpp  mc_routines.h  models.cpp  models.h  pyproject.toml  selected  test.sh  toolchain-x86_64-linux.cmake  utils.cpp  utils.h
app/: CMakeLists.txt  main.cc  main.cpp
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  frusa_mc
include/: 1d_fields.h  1d_particles.h  CMakeLists.txt  fields.h  mc_routines.h  model.h  particles.h  utils.h
include/engine/: CMakeLists.txt  mc_routines.h
include/geometry/: CMakeLists.txt  chain.h  cubic.h  fcc.h  geometry.h  square.h  triangular.h
include/models/: CMakeLists.txt  model.h
include/models/default/: default_average.h  default_averages.h  default_include.h  default_interactions.h  default_parameters.h  default_state.h  default_update.h
include/models/fields/: 1d_fields.h  CMakeLists.txt  fields_averages.h  fields_chain.h  fields_geometry.h  fields_hexagonal.h  fields_include.h  fields_interactions.h  fields_parameters.h  fields_square.h  fields_state.h  fields_update.h
include/models/ising/: fields_chain.h  fields_geometry.h  fields_hexagonal.h  fields_interactions.h  fields_square.h  fields_state.h  fields_update.h  ising_parameters.h
include/models/lattice_particles/: .hidden_CMakeLists.txt  lattice_particles_averages.h  lattice_particles_geometry.h  lattice_particles_hexagonal.h  lattice_particles_include.h  lattice_particles_interactions.h  lattice_particles_parameters.h  lattice_particles_state.h  lattice_particles_update.h
include/models/particles/: 1d_particles.h  particles_averages.h  particles_interactions.h  particles_parameters.h  particles_records.h  particles_state.h  particles_update.h
include/utility/: CMakeLists.txt  io_utils.h  utils.h  vector_utils.h
input/: mc_params.json  model_params.json
python/: config.py  contact_utils.py  example_plot_chain.py  hexagonal_helper_functions.py  initialize_parameters.py  io_tools.py  json_dump.py  lattice_helper_classes.py  parameters_default.py  parameters_ex_triangular.py  parameters_fields.py  parameters_lattice.py  parameters_particles_1d.py  pyproject.toml  requirements.txt
scripts/: generate_run_files.py  (+1 more)
src/: main.cpp  (+4 more)
src/engine/: CMakeLists.txt  mc_routines.cc
src/geometry/: CMakeLists.txt  chain.cc  fcc.cc  geometry.cc  square.cc  triangular.cc  triangular.cpp
src/models/: 1d_fields.cpp  CMakeLists.txt  README.md  model.cc  model.cpp
src/models/default/: CMakeLists.txt  README.md  default_average.cc  default_averages.cc  default_interactions.cc  default_parameters.cc  default_state.cc  default_update.cc
src/models/fields/: 1d_fields.cpp  CMakeLists.txt  fields_averages.cc  fields_chain.cc  fields_geometry.cc  fields_hexagonal.cc  fields_interactions.cc  fields_parameters.cc  fields_square.cc  fields_state.cc  fields_update.cc
src/models/ising/: fields_average.cc  fields_chain.cc  fields_geometry.cc  fields_hexagonal.cc  fields_interactions.cc  fields_square.cc  fields_state.cc  fields_update.cc  ising_parameters.cc
src/models/lattice_particles/: CMakeLists.txt  README.md  lattice_mc  lattice_particles_averages.cc  lattice_particles_geometry.cc  lattice_particles_hexagonal.cc  lattice_particles_interactions.cc  lattice_particles_parameters.cc  lattice_particles_state.cc  lattice_particles_update.cc  lattice_particles_update.cpp  main.cc  makefile
src/models/lattice_particles/lattice_mc.dSYM/Contents/: Info.plist
src/models/lattice_particles/lattice_mc.dSYM/Contents/Resources/DWARF/: lattice_mc
src/models/lattice_particles/lattice_mc.dSYM/Contents/Resources/Relocations/aarch64/: lattice_mc.yml
src/models/particles/: CMakeLists.txt  particles_averages.cc  particles_interactions.cc  particles_parameters.cc  particles_records.cc  particles_state.cc  particles_update.cc
test/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  makefile  test_geometry.cc
test/00_plot_all_cubes/: 00_plot_all_cubes.py
test/01_cubic_dimers/: 00_generate_inputs.py  02_plot_all_results.py  03_analyzing_data.ipynb
test/02_plot_all_fcc/: 00_plot_all_rhombic_orientations.py
test/03_fcc_dimers/: 00_generate_inputs.py  01_run_simulations.py  02_plot_all_results.py
test/04_fcc_fibers/: 00_generate_inputs.py  01_run_simulations.py  02_plot_all_results.py  03_analyzing_data.ipynb  README.md
test/05_fcc_crystal/: 00_generate_inputs.py  01_run_simulations.py  02_plot_all_results.py  03_analyzing_data.ipynb
test/06_simple_square/: 00_generate_inputs.py
test/include/: CMakeLists.txt  Makefile  cmake_install.cmake
test/include/engine/: CMakeLists.txt  Makefile  cmake_install.cmake  mc_routines.h
test/include/geometry/: Makefile  chain.h  cmake_install.cmake  triangular.h
test/include/models/: Makefile  cmake_install.cmake
test/include/models/fields/: fields_interactions.h  fields_square.h
test/include/models/ising/: fields_geometry.h  fields_state.h  ising_parameters.h
test/include/models/particles/: 1d_particles.h  particles_parameters.h
test/include/utility/: CMakeLists.txt  Makefile  cmake_install.cmake
test/sanity_check/triangular/: helper_fct.py
test/src/engine/: Makefile  cmake_install.cmake
test/src/geometry/: Makefile  cmake_install.cmake
test/src/models/: Makefile  cmake_install.cmake
test/src/models/default/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  default_averages.cc  default_interactions.cc  default_parameters.cc  default_update.cc
test/src/models/fields/: CMakeLists.txt  fields_interactions.cc  fields_parameters.cc
test/src/models/ising/: fields_average.cc  fields_hexagonal.cc  ising_parameters.cc
test/src/models/particles/: 1d_particles.cpp
test/src/utility/: CMakeLists.txt  Makefile  cmake_install.cmake  io_utils.cc  vector_utils.cc
(+125 files in other folders)
