add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/engine)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/models)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utility)

set(HEADER_FRUSA_ENGINE
    ${HEADER_FRUSA_ENGINE}
    PARENT_SCOPE)

set(HEADER_FRUSA_MODELS
    ${HEADER_FRUSA_MODELS}
    PARENT_SCOPE)

set(HEADER_FRUSA_UTILITY
    ${HEADER_FRUSA_UTILITY}
    PARENT_SCOPE)

set(HEADER_FRUSA_THIRDPARTY
  ${HEADER_FRUSA_THIRDPARTY}
    PARENT_SCOPE)
